# runescape-motiondetector

./: DEPENDENCIES.txt  IDEAS.txt  README  README.md  dilate_XY.py  motion_detect.sh  skeleton_run.sh  updater_rs.sh
autoclicker/: mineclick.sh
autoclicker/configs/: coal_config.txt  iron.txt  silver.txt
mineDetector/: CMakeLists.txt  Makefile  args.h  blobops.h  blobprofile.h  cvfuncs.h  desktopops.h  diffimage.h  dropzone.h  locatedropzone.h  main.cpp  mineDetect_wrapper.sh  mineDetector  movement_debugger.sh  orefinder.h  params.h  playerfinder.h  rockDetector.cbp  rockfinder.h  timeops.h  typedefs.h
mineDetector/tools/: movement_debugger.sh  pick_debugger.sh
rockDetector/: CMakeCache.txt  CMakeLists.txt  blobmaster.h  cmake_install.cmake  imagediff.h  main.backup  main.cpp  mineDetect  rockDetector  rockDetector.cbp
skeletonDetect/: CMakeLists.txt  blobmaster.h  blobtest.h  colortest.h  diffimage.h  imagediff.h  main.cpp  motion_detect.sh  xdesktop.h
skeletonDetect-build/: CMakeCache.txt  Makefile  cmake_install.cmake  skeletonDetect  skeletonDetect.cbp
